# sound-pass

./: .gitignore  README.md  main.py  pyproject.toml
src/: logger.py  main.py
src/bot/: telegram_bot.py
src/configs/: config.yaml  messages.yaml
src/db/: db_manager.py  models.py
src/handlers/: user_data_handler.py
