[tool.poetry]
name = "soundpass"
version = "1.0.0"
description = ""
authors = ["Igor Gorelkov <igorelkov@keenetica.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^21.9"
telegram = "^0.0.1"
telebot = "^0.0.5"
pyyaml = "^6.0.2"
colorlog = "^6.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
